# graphcore

./: .gitignore  Makefile  README.md  __init__.py  graph.py  pyproject.toml  requirements.txt  summary.py  utils.py
.github/: dependabot.yml
.github/workflows/: ci.yml  mypy.yml  pyright.yml  pytest.yml  release.yml  setup.yml
graphcore/: graph.py  result_registry.py  summary.py  testing.py  utils.py
graphcore/tools/: human.py  memory.py  results.py  schemas.py  vfs.py
scripts/: netrc_login.sh
tests/: conftest.py  test_fs_layered.py  test_memory.py  test_memory_async.py  test_vfs.py
tools/: __init__.py  human.py  memory.py  results.py  schemas.py  vfs.py
