[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphcore"
version = "0.1.0"
description = "A reusable framework for writing LLM-powered applications that iterate using various client side tools"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0"}
authors = [
    {name = "Certora Ltd."}
]
 
dependencies = [
    "langchain>=1.2",
    "langchain-anthropic>=1.4",
    "langchain-core>=1.2",
    "langgraph>=1.1",
    "psycopg[binary]>=3.2",
    "psycopg[pool]>=3.2"
]
 
[dependency-groups]
test = ["pytest>=9.0", "pytest-asyncio>=1.3", "testcontainers>=4.0"]
ci = ["pyright"]

[tool.setuptools]
packages = ["graphcore", "graphcore.tools"]
