[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "graphcore"
dynamic = ["version"]
description = "A reusable framework for writing LLM-powered applications that iterate using various client side tools"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0" }
authors = [{ name = "Certora Ltd." }]

dependencies = [
    "langchain>=1.2",
    "langchain-anthropic>=1.4",
    "langchain-core>=1.2",
    "langgraph==1.0.5",
    "langgraph-prebuilt==1.0.8",
    "psycopg[binary]>=3.2",
    "psycopg[pool]>=3.2",
]

[dependency-groups]
test = ["pytest>=9.0", "pytest-asyncio>=1.3", "testcontainers>=4.0"]
ci = ["pyright"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "graphcore/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["graphcore"]

[[tool.uv.index]]
name = "certora"
url = "https://certora-092457480553.d.codeartifact.us-west-2.amazonaws.com/pypi/Certora-Internal/simple/"
publish-url = "https://certora-092457480553.d.codeartifact.us-west-2.amazonaws.com/pypi/Certora-Internal/"
explicit = true
